--- a/index.html
+++ b/index.html
@@ -61,8 +61,60 @@
         <span>Chocolate</span>
         <hr>
       </div>
+
+      <section class="cards">
+        <div class="card">
+          <img src="./assets/imgs/choc-belga.png" alt="Uma fatia de bolo de chocolate belga">
+          <h2>Chocolate Belga</h2>
+          <p>Bolo macio de chocolate, aplicado granulado que traz crocância e um sabor irresistível.</p>
+          <span>R$ 80,00/kg.</span>
+        </div>
+
+        <div class="card">
+          <img src="./assets/imgs/choc-ninho.png" alt="Uma fatia de bolo de chocolate com ninho">
+          <h2>Chocolate com Ninho</h2>
+          <p>Bolo macio de chocolate com creme de leite Ninho, um sabor irresistível.</p>
+          <span>R$ 90,00/kg.</span>
+        </div>
+
+        <div class="card">
+          <img src="./assets/imgs/cenoura-choc.png" alt="Uma fatia de bolo de cenoura com cobertura de chocolate">
+          <h2>Cenoura com Chocolate</h2>
+          <p>Bolo macio de cenoura com cobertura de chocolate, um sabor família e irresistível.</p>
+          <span>R$ 70,00/kg.</span>
+        </div>
+
+        <div class="card">
+          <img src="./assets/imgs/choc-ninho-morango.png" alt="Uma fatia de bolo de ninho com morango e cobertura de chocolate">
+          <h2>Ninho com Morango</h2>
+          <p>Bolo macio de chocolate com recheio de leite ninho e morango. A melhor combinação para seu dia.</p>
+          <span>R$ 105,00/kg.</span>
+        </div>
+
+        <div class="card">
+          <img src="./assets/imgs/choc-pistache.png" alt="Uma fatia de bolo de chocolate com pistache">
+          <h2>Chocolate com Pistache</h2>
+          <p>Bolo macio de chocolate, aplicado granulado que traz crocância e um sabor irresistível.</p>
+          <span>R$ 80,00/kg.</span>
+        </div>
+
+        <div class="card">
+          <img src="./assets/imgs/choc-oreo.png" alt="Uma fatia de bolo de chocolate com biscoito recheado Oreo">
+          <h2>Chocolate com Oreo</h2>
+          <p>Bolo macio chocolate, com creme delicado, recheio e cobertura de biscoitos rechedos Oreo, um sabor irresistível.</p>
+          <span>R$ 100,00/kg.</span>
+        </div>
+      </section>
     </section>
+
+    <a class="whatsapp" href="https://wa.me/5511999999999?text=Olá%20,%20gostaria%20de%20mais%20informações." target="_blank">
+      <img src="./assets/whatsapp.png" alt="icone do whatsapp">
+    </a>
   </main>
+
+  <footer>
+    <p>Bolos do Jacquin® - Todos os direitos reservados</p>
+  </footer>
 </body>
 
 </html>
