Seção cadastro iniciada

--- a/cadastro/index.html
+++ b/cadastro/index.html
@@ -61,7 +61,7 @@
             <h2>Cadastro</h2>
             <hr>
 
-            <div>
+            <div class="box_cadastro">
                 <div class="cadastro_coluna1">
                     <div class="bolos">
                         <label for="bolo">Bolo</label>
@@ -78,10 +78,26 @@
                             <input type="file" name="" id="img">
                         </div>
                     </div>
+
+                    <div class="valor_peso">
+                        <div class="valor">
+                            <label for="val">Valor</label>
+                            <input type="text" name="" id="val">
+                        </div>
+
+                        <div class="peso">
+                            <label for="peso">Peso</label>
+                            <input type="text" name="" id="peso">
+                        </div>
+                    </div>
                 </div>
 
-                <div class="cadastro_coluna2"></div>
+                <div class="cadastro_coluna2">
+                    <label for="desc">Descrição</label>
+                    <textarea name="" id="desc"></textarea>
+                </div>
             </div>
+            <input type="button" value="Cadastrar">
         </section>
 
 
