--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BJ - Produtos</title>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Bellota:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Julius+Sans+One&display=swap"
     rel="stylesheet">
+
+  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -53,9 +60,34 @@
       </svg>
     </div>
   </header>
-  
+
   <main>
-    <section class="banner"></section>
+    <!-- <section class="banner"></section> -->
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./assets/imgs/banner.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/imgs/banner2.png" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./assets/imgs/banner3.png" class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+
+
     <section class="container">
       <h1 class="acessivel">produtos de chocolate</h1>
       <div class="titulo">
@@ -86,7 +118,8 @@
         </div>
 
         <div class="card">
-          <img src="./assets/imgs/choc-ninho-morango.png" alt="Uma fatia de bolo de ninho com morango e cobertura de chocolate">
+          <img src="./assets/imgs/choc-ninho-morango.png"
+            alt="Uma fatia de bolo de ninho com morango e cobertura de chocolate">
           <h2>Ninho com Morango</h2>
           <p>Bolo macio de chocolate com recheio de leite ninho e morango. A melhor combinação para seu dia.</p>
           <span>R$ 105,00/kg.</span>
@@ -102,13 +135,15 @@
         <div class="card">
           <img src="./assets/imgs/choc-oreo.png" alt="Uma fatia de bolo de chocolate com biscoito recheado Oreo">
           <h2>Chocolate com Oreo</h2>
-          <p>Bolo macio chocolate, com creme delicado, recheio e cobertura de biscoitos rechedos Oreo, um sabor irresistível.</p>
+          <p>Bolo macio chocolate, com creme delicado, recheio e cobertura de biscoitos rechedos Oreo, um sabor
+            irresistível.</p>
           <span>R$ 100,00/kg.</span>
         </div>
       </section>
     </section>
 
-    <a class="whatsapp" href="https://wa.me/5511999999999?text=Olá%20,%20gostaria%20de%20mais%20informações." target="_blank">
+    <a class="whatsapp" href="https://wa.me/5511999999999?text=Olá%20,%20gostaria%20de%20mais%20informações."
+      target="_blank">
       <img src="./assets/whatsapp.png" alt="icone do whatsapp">
     </a>
   </main>
